--- a/Downloads/jwelleryfrontend-main/jwelleryfrontend-main/src/app/shopping-cart/filter/filter.component.html
+++ b/Downloads/jwelleryfrontend-main/jwelleryfrontend-main/src/app/shopping-cart/filter/filter.component.html
@@ -1,57 +1,93 @@
 
-    
+
 <div class="grid">
-   
     
     <div class="filter">
         <div class="col-12 md:col-6 lg:col-3">
             <h6>RANGE</h6>
         </div>
         <div class="col-12 md:col-6 lg:col-3">
-            <p-slider [(ngModel)]="rangeValues" [range]="true"></p-slider>
-            <div style="padding: 6px;">{{rangeValues[0] + ' - ' + rangeValues[1]}}</div>
+             <p-slider [(ngModel)]="rangeValues" [range]="true" [max]=100000 (onSlideEnd)="onCheckboxChange($event)"></p-slider>
+            <div style="padding: 6px;">{{rangeValues[0]+'-'+rangeValues[1]}}</div> 
+
         </div>
     </div>
-    
+    <p-accordion >
     <div class="filter">
+       <p-accordionTab header="PRODUCT TYPE">
         <div class="col-12 md:col-6 lg:col-3">
-            <div class="filter-header">PRODUCT TYPE</div>
-            <div class="col-12 md:col-6 lg:col-3"  >
+           <!-- <div class="filter-header">PRODUCT TYPE</div>-->
+            <!-- <div class="col-12 md:col-6 lg:col-3"  >
                  <p-checkbox name="groupname" value="Diamond Rings" id="mycheck1"  [(ngModel)]="selectedValues" (onChange)="onCheckboxChange($event)" ></p-checkbox>
-                     <span class="filter-text">Diamond Rings</span>  
-            <!--  <input type="checkbox" value="Diamond Rings" id="mycheck1" [(ngModel)]="selectedValues" (change)="onCheckboxChange($event)">Diamond Rings-->
-            
-        </div>
+                 <span class="filter-text">Diamond Rings</span>
+            </div>
+
             <div class="col-12 md:col-6 lg:col-3">
                <p-checkbox name="groupname" value="Gold Rings" [(ngModel)]="selectedValues" (onChange)="onCheckboxChange($event)" ></p-checkbox>
-             <span class="filter-text">Gold Rings</span>
-               <!--  <input type="checkbox" value="Gold Rings" id="mycheck1" [(ngModel)]="selectedValues" (change)="onCheckboxChange($event)">Gold Rings-->
+                <span class="filter-text">Gold Rings</span>
             </div>
+
+            <div class="col-12 md:col-6 lg:col-3">
+                <p-checkbox name="groupname" value="Platinum Jwellery" [(ngModel)]="selectedValues" (onChange)="onCheckboxChange($event)" ></p-checkbox>
+                 <span class="filter-text">Platinum Jwellery</span>
+             </div>
+
+             <div class="col-12 md:col-6 lg:col-3">
+                <p-checkbox name="groupname" value="Plain Gold Jwellery" [(ngModel)]="selectedValues" (onChange)="onCheckboxChange($event)" ></p-checkbox>
+                 <span class="filter-text">Plain Gold Jwellery</span>
+             </div> -->
+
+             <div *ngFor="let item of f1">
+                <p-checkbox name="groupname" value={{item.name}} [(ngModel)]="selectedValues" (onChange)="onCheckboxChange($event)" ></p-checkbox>
+                <span class="filter-text">{{item.name}}</span>
+             </div>
+             
         </div>
-    </div>
+        </p-accordionTab>
+        </div>
 
     <div class="filter">
+        <p-accordionTab header="PURITY">
         <div class="col-12 md:col-6 lg:col-3">
-            <div class="filter-header">GOLD PURITY</div>
-            <div class="col-12 md:col-6 lg:col-3">
-                <p-checkbox name="groupname" value="14k" [(ngModel)]="enterName" (onChange)="onCheckboxChange($event)"></p-checkbox>
-                <span class="filter-text">14 kt</span>
+         <!--  <div class="filter-header">GOLD PURITY</div>--> 
+            <!-- <div class="col-12 md:col-6 lg:col-3">
+                <p-checkbox name="groupname" value="22k" [(ngModel)]="selectedPurities" (onChange)="onCheckboxChange($event)"> </p-checkbox>
+                <span class="filter-text">22 kt</span>
             </div>
+
             <div class="col-12 md:col-6 lg:col-3">
-                <p-checkbox name="groupname" value="18k" [(ngModel)]="selectedPurities" (onChange)="onCheckboxChange($event)"></p-checkbox>
-                <span class="filter-text">18 kt</span>
+                <p-checkbox name="groupname" value="12k" [(ngModel)]="selectedPurities" (onChange)="onCheckboxChange($event)"></p-checkbox>
+                <span class="filter-text">12 kt</span>
             </div>
+
             <div class="col-12 md:col-6 lg:col-3">
                 <p-checkbox name="groupname" value="24k" [(ngModel)]="selectedPurities" (onChange)="onCheckboxChange($event)"></p-checkbox>
                 <span class="filter-text">24 kt</span>
             </div>
+
+            <div class="col-12 md:col-6 lg:col-3">
+                <p-checkbox name="groupname" value="14k" [(ngModel)]="selectedPurities" (onChange)="onCheckboxChange($event)"></p-checkbox>
+                <span class="filter-text">14 kt</span>
+            </div>
+
+            <div class="col-12 md:col-6 lg:col-3">
+                <p-checkbox name="groupname" value="18k" [(ngModel)]="selectedPurities" (onChange)="onCheckboxChange($event)"></p-checkbox>
+                <span class="filter-text">18 kt</span>
+            </div> -->
+            <div *ngFor="let item of f2">
+                <p-checkbox name="groupname" value={{item.name}} [(ngModel)]="selectedPurities" (onChange)="onCheckboxChange($event)" ></p-checkbox>
+                <span class="filter-text">{{item.name}}</span>
+            </div>
+
         </div>
+        </p-accordionTab>
     </div>
 
     <div class="filter">
+        <p-accordionTab header="METAL COLOR">
         <div class="col-12 md:col-6 lg:col-3">
-            <div class="filter-header">METAL COLOR</div>
-            <div class="col-12 md:col-6 lg:col-3">
+       <!--   <div class="filter-header">METAL COLOR</div> -->  
+            <!-- <div class="col-12 md:col-6 lg:col-3">
                 <p-checkbox name="groupname" value="val6" [(ngModel)]="selectedValues"></p-checkbox>
                 <span class="filter-text">Yellow</span>
             </div>
@@ -62,9 +98,18 @@
             <div class="col-12 md:col-6 lg:col-3">
                 <p-checkbox name="groupname" value="val8" [(ngModel)]="selectedValues"></p-checkbox>
                 <span class="filter-text">Rose</span>
+            </div> -->
+            <div *ngFor="let item of f3">
+                <p-checkbox name="groupname" value={{item.name}} [(ngModel)]="selectedPurities" (onChange)="onCheckboxChange($event)" ></p-checkbox>
+                <span class="filter-text">{{item.name}}</span>
             </div>
         </div>
+    </p-accordionTab>
+
     </div>
+</p-accordion>
+</div>
+
 
  <!--   <div *ngIf="selectedValues.length > 0||selectedPurities.length>0">
         <div  *ngFor="let item of products">
