--- a/Downloads/jwelleryfrontend-main/jwelleryfrontend-main/src/app/shopping-cart/product-list/product-item/product-item.component.css
+++ b/Downloads/jwelleryfrontend-main/jwelleryfrontend-main/src/app/shopping-cart/product-list/product-item/product-item.component.css
@@ -1,3 +1,15 @@
-i{
+.far,.fas{
     float:right;
+    color: palevioletred;
 }
+
+.card-text1{
+    color: #000;
+    font-size: 18px;
+    line-height: normal;
+    margin: 0;
+}
+
+
+
+
