--- a/Downloads/jwelleryfrontend-main/jwelleryfrontend-main/src/app/login/login/login.component.html
+++ b/Downloads/jwelleryfrontend-main/jwelleryfrontend-main/src/app/login/login/login.component.html
@@ -23,6 +23,7 @@
             <div class="form-group">
               <input type="checkbox" id="remember" name="remember">
               <label class="ml-1" for="remember">Remember Me</label>
+              <a href="/register" style="float: right;">Sign Up</a>
             </div>
    
             <button class="btn btn-primary btn-block">Login</button>
