--- a/Downloads/jwelleryfrontend-main/jwelleryfrontend-main/src/app/payment/payment.component.html
+++ b/Downloads/jwelleryfrontend-main/jwelleryfrontend-main/src/app/payment/payment.component.html
@@ -1,10 +1,10 @@
 <div class="form-group">
     <input id="ORDER_ID" tabindex="1" maxlength="20" size="20"
-           name="ORDER_ID" autocomplete="off" class="form-control" placeholder="ORDER ID" >
+           name="ORDER_ID" autocomplete="off" class="form-control" placeholder="ORDER ID" [(ngModel)]="orderId" >
 </div>
 <div class="form-group">
     <input type="text" class="form-control" placeholder="Customer ID" value=""
-           name="CUST_ID"/>
+           name="CUST_ID" [(ngModel)]="customerId"/>
 </div>
 <div class="form-group">
     <input type="text" class="form-control" placeholder="INDUSTRY_TYPE_ID" value=""
@@ -16,7 +16,7 @@
 </div>
 <div class="form-group">
     <input type="text" class="form-control" placeholder="Amount" value=""
-           name="TXN_AMOUNT"/>
+           name="TXN_AMOUNT" [(ngModel)]="transactionAmount"/>
 </div>
 <button type="submit" class="btnRegister" style="text-align : center" (click)="pay()">Pay with Paytm</button>
 
