--- a/Downloads/jwelleryfrontend-main/jwelleryfrontend-main/src/app/shopping-cart/shopping-cart.component.html
+++ b/Downloads/jwelleryfrontend-main/jwelleryfrontend-main/src/app/shopping-cart/shopping-cart.component.html
@@ -3,11 +3,11 @@
         <app-filter></app-filter>
     </div>
   
-    <div class="col-md-8">
+    <div class="col-md-9">
         <app-product-list></app-product-list>
     </div>
 
-    <div class="col">
+    <!-- <div class="col">
         <app-cart></app-cart>
-      </div>
+      </div> -->
 </div>
