--- a/Downloads/jwelleryfrontend-main/jwelleryfrontend-main/src/app/shopping-cart/cart/cart-final/cart-final.component.css
+++ b/Downloads/jwelleryfrontend-main/jwelleryfrontend-main/src/app/shopping-cart/cart/cart-final/cart-final.component.css
@@ -1,42 +1,48 @@
-.summeryBorderBox {
-    border: 1px solid #e0e0e0;
-    margin-bottom: 30px;
-    padding-right: 0;
-    border-width: initial;
+.card {
+    height: 60vh;
+    margin: 25px;
+    padding: 25px;
 }
 
-.prc-summary {
-    float: left;
-    width: 100%;
-}
-
-.paymentBox .paymentBoxInner {
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
-    width: 100%;
-    font-family: montserrat-regular,sans-serif;
-    font-size: 14px;
-    line-height: 1.33;
-    padding-bottom: 10px;
-}
-
-.pmts-wrap .pmts-btn {
-     float: right; 
-     display: table-cell; 
-     vertical-align: middle; 
-     padding: 15px; 
-     background: #42a2a2; 
-     border-radius: 5px; 
-     font-size: 16px; 
-     font-family: montserrat,sans-serif; 
-     line-height: 18px; 
-     color: #fff; 
-    margin: 0;
-    text-transform: uppercase;
-    width: 50%;
+.center img {
+    text-decoration: none;
+    color: inherit;
     border: none;
-    clear: both;
+    outline: none;
+    height: 162px;
+    width: 250px;
+    margin: 20px 0px;
 }
 
+h4,
+h6 {
+    font-weight: 400;
+}
+
+.center {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+
+.card-table {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    min-width: none;
+    word-wrap: break-word;
+    background-color: #fff;
+    background-clip: border-box;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    border-radius: .25rem;
+}
+
+.center .btn {
+    font-size: 14px !important;
+    margin-top: 20px !important;
+    font-weight: 400;
+    padding: 12px 72px;
+    border-radius: 3px !important;
+}
